completed the algebra page

--- a/algebra.html
+++ b/algebra.html
@@ -7,3 +7,9 @@
 <body>
 <p>You can now select the topics you want to study.<br>It is recommended to follow the sequence in which the topics are listed as each topic builds on the last</p>
 <h1>list of contents</h1>
+<ul>
+<li><a href="variables_and_expressions.html">Variables and Expressions</a></li>
+<li><a href="equations.html">Equations (One-step, Two-step)</a></li>
+<li><a href="inequalities.html">Inequalities</a></li>
+<li><a href="graphing_linear_equations.html">Graphing Linear Equations</a></li>
+
