corrected the name of the file

--- a/main_page.html
+++ b/main_page.html
@@ -11,7 +11,7 @@
 
 <h2>For middle school</h2>
 
-<a href = "algebra basics.html">Here is our introductory course on algebra</a>
+<a href = "algebra.html">Here is our introductory course on algebra</a>
 
 <a href = "geometry.html">Here is our introductory course on geometry</a>
 
