made the algebra page more presentable

--- a/algebra.html
+++ b/algebra.html
@@ -1,15 +1,46 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>introduction to algebra</title>
+<title>Introduction to Algebra</title>
 </head>
 
 <body>
-<p>You can now select the topics you want to study.<br>It is recommended to follow the sequence in which the topics are listed as each topic builds on the last</p>
-<h1>list of contents</h1>
-<ul>
-<li><a href="variables_and_expressions.html">Variables and Expressions</a></li>
-<li><a href="equations.html">Equations (One-step, Two-step)</a></li>
-<li><a href="inequalities.html">Inequalities</a></li>
-<li><a href="graphing_linear_equations.html">Graphing Linear Equations</a></li>
 
+    <header>
+        <h1>Welcome to Your Algebra Journey!</h1>
+        <p>Your guide to mastering the fundamentals of algebra.</p>
+    </header>
+
+    <main>
+        <p>You can now select the topics you want to study.<br>It is recommended to follow the sequence in which the topics are listed as each topic builds on the last.</p>
+
+        ---
+
+        <h2>List of Contents</h2>
+        <ul>
+            <li><a href="variables_and_expressions.html">Variables and Expressions</a></li>
+            <li><a href="equations.html">Equations (One-step, Two-step)</a></li>
+            <li><a href="inequalities.html">Inequalities</a></li>
+            <li><a href="graphing_linear_equations.html">Graphing Linear Equations</a></li>
+        </ul>
+
+        ---
+
+        <section>
+            <h3>Why Follow the Sequence?</h3>
+            <p>Each topic in our curriculum is carefully designed to build upon the knowledge gained in the previous one. Starting with **Variables and Expressions** lays the groundwork for understanding how to manipulate terms, which is essential for solving **Equations**. Once you grasp equations, **Inequalities** introduce a new dimension to problem-solving, and finally, **Graphing Linear Equations** brings together algebraic concepts with visual representation. Following this progression ensures a solid understanding and smooth learning experience.</p>
+        </section>
+
+        <section>
+            <h3>What's Coming Next?</h3>
+            <p>We're constantly working to expand our content! Future topics will include more advanced concepts such as systems of equations, polynomials, and quadratic equations. Be sure to check back regularly for updates and new lessons.</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>We will be adding more topics in the future, so please check back later.</p>
+        <p>Happy learning!</p>
+    </footer>
+
+</body>
+</html>
