corrected the links to the main page from the course pages

--- a/data_probability.html
+++ b/data_probability.html
@@ -166,7 +166,7 @@
 
     <main>
         <nav class="navigation">
-            <a href="index.html">← Back to Courses</a>
+            <a href="main_page.html">← Back to Courses</a>
         </nav>
 
         <section>
