--- a/numbers.html
+++ b/numbers.html
@@ -166,7 +166,7 @@
 
     <main>
         <nav class="navigation">
-            <a href="index.html">← Back to Courses</a>
+            <a href="main_page.html">← Back to Courses</a>
         </nav>
 
         <section>
