ensured that the algebra page has the same structure as the other pages

--- a/algebra.html
+++ b/algebra.html
@@ -1,109 +1,257 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Introduction to Algebra</title>
-<style>
-    /* Basic CSS for table styling - you can expand on this! */
-    table {
-        width: 80%; /* Adjust as needed */
-        border-collapse: collapse;
-        margin: 20px 0;
-        box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-    }
-    th, td {
-        border: 1px solid #ddd;
-        padding: 12px 15px;
-        text-align: left;
-    }
-    th {
-        background-color: #f2f2f2;
-        font-weight: bold;
-        color: #333;
-    }
-    tr:nth-child(even) {
-        background-color: #f9f9f9;
-    }
-    tr:hover {
-        background-color: #e6e6e6;
-    }
-    caption {
-        font-size: 1.2em;
-        margin-bottom: 10px;
-        font-weight: bold;
-        text-align: left;
-    }
-</style>
+    <title>Algebra: Variables and Equations - Skill-Up Hub</title>
+    <style>
+        /* General Body Styling (consistent across pages) */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 20px;
+            background-color: #f4f4f4;
+            color: #333;
+            line-height: 1.6;
+        }
+
+        /* Header Styling (consistent across pages) */
+        header {
+            background-color: #2c3e50;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+            margin-bottom: 30px;
+        }
+
+        header h1 {
+            margin-top: 0;
+            font-size: 2.5em;
+            letter-spacing: 1px;
+        }
+
+        /* Main Content Area Styling (consistent across pages) */
+        main {
+            max-width: 960px;
+            margin: 0 auto;
+            background-color: #fff;
+            padding: 30px;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        /* Headings Styling */
+        h2 {
+            color: #2980b9;
+            border-bottom: 2px solid #2980b9;
+            padding-bottom: 5px;
+            margin-top: 30px;
+        }
+
+        h3 {
+            color: #34495e;
+            margin-top: 25px;
+        }
+
+        h4 {
+            color: #555;
+            margin-top: 20px;
+        }
+
+        p {
+            margin-bottom: 15px;
+        }
+
+        /* Navigation Links (Back to Home / Course Navigation) */
+        .navigation {
+            margin-bottom: 20px;
+            padding-bottom: 15px;
+            border-bottom: 1px solid #eee;
+        }
+
+        .navigation a {
+            display: inline-block;
+            margin-right: 15px;
+            text-decoration: none;
+            color: #2980b9;
+            font-weight: bold;
+        }
+
+        .navigation a:hover {
+            text-decoration: underline;
+        }
+
+        /* List of Contents (consistent with other course pages) */
+        .content-list ul {
+            list-style: disc; /* Use traditional bullets */
+            padding-left: 20px;
+            margin-bottom: 20px;
+        }
+
+        .content-list ul li {
+            margin-bottom: 8px;
+        }
+
+        .content-list ul li a {
+            color: #2c3e50;
+            text-decoration: none;
+            font-weight: normal;
+        }
+
+        .content-list ul li a:hover {
+            color: #3498db;
+            text-decoration: underline;
+        }
+
+        /* Table Styling (consistent with other pages) */
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin: 25px 0;
+            font-size: 0.95em;
+        }
+
+        table caption {
+            font-size: 1.3em;
+            font-weight: bold;
+            margin-bottom: 15px;
+            color: #2c3e50;
+        }
+
+        th, td {
+            border: 1px solid #ddd;
+            padding: 12px 15px;
+            text-align: left;
+        }
+
+        th {
+            background-color: #3498db;
+            color: white;
+            font-weight: normal;
+        }
+
+        tr:nth-child(even) {
+            background-color: #f9f9f9;
+        }
+
+        tr:hover {
+            background-color: #f1f1f1;
+        }
+
+        /* Footer Styling (consistent across pages) */
+        footer {
+            text-align: center;
+            margin-top: 40px;
+            padding-top: 20px;
+            border-top: 1px solid #eee;
+            color: #777;
+            font-size: 0.9em;
+        }
+
+        footer a {
+            color: #2980b9;
+            text-decoration: none;
+        }
+
+        footer a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 
 <body>
 
     <header>
-        <h1>Welcome to Your Algebra Journey!</h1>
-        <p>Your guide to mastering the fundamentals of algebra.</p>
+        <h1>Algebra: Variables and Equations</h1>
+        <p>Unlock the power of symbols to solve mathematical puzzles.</p>
     </header>
 
     <main>
-        <p>You can now select the topics you want to study.<br>It is recommended to follow the sequence in which the topics are listed as each topic builds on the last.</p>
-
-        <h2>List of Contents</h2>
-        <ul>
-            <li><a href="variables_and_expressions.html">Variables and Expressions</a></li>
-            <li><a href="equations.html">Equations (One-step, Two-step)</a></li>
-            <li><a href="inequalities.html">Inequalities</a></li>
-            <li><a href="graphing_linear_equations.html">Graphing Linear Equations</a></li>
-        </ul>
+        <nav class="navigation">
+            <a href="main_page.html">← Back to Courses</a>
+        </nav>
 
         <section>
-            <h3>Learning at a Glance</h3>
+            <h2>Welcome to the World of Algebra!</h2>
+            <p>Algebra is a fundamental branch of mathematics that replaces numbers with symbols and letters to represent values, allowing us to solve problems where some quantities are unknown. It's often called the "language of mathematics" because it provides powerful tools for abstract thinking and problem-solving.</p>
+            <p>This introductory course is designed to make algebra accessible and engaging, building your skills step-by-step. It is highly recommended to follow the sequence of topics as each concept builds upon the last for a smooth learning experience.</p>
+        </section>
+
+        <section class="content-list">
+            <h2>Course Contents</h2>
+            <p>Here are the topics covered in this introductory Algebra course:</p>
+            <ul>
+                <li><a href="variables_and_expressions.html">Variables and Expressions</a></li>
+                <li><a href="equations.html">Equations (One-step, Two-step)</a></li>
+                <li><a href="inequalities.html">Inequalities</a></li>
+                <li><a href="graphing_linear_equations.html">Graphing Linear Equations</a></li>
+                <li><a href="systems_of_equations.html">Systems of Equations (Introduction)</a></li>
+                <li><a href="polynomials_introduction.html">Polynomials (Introduction)</a></li>
+            </ul>
+        </section>
+
+        <section>
+            <h3>Key Concepts at a Glance</h3>
+            <p>Algebra introduces new terminology and symbols that are crucial to understand. Here are some foundational concepts:</p>
             <table>
-                <caption>Key Learning Objectives per Topic</caption>
+                <caption>Fundamental Algebraic Terms</caption>
                 <thead>
                     <tr>
-                        <th>Topic</th>
-                        <th>What You Will Learn</th>
-                        <th>Prerequisites</th>
+                        <th>Term</th>
+                        <th>Definition</th>
+                        <th>Example</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td><a href="variables_and_expressions.html">Variables and Expressions</a></td>
-                        <td>Understand variables, constants, terms; evaluate expressions; simplify expressions.</td>
-                        <td>Basic arithmetic operations (addition, subtraction, multiplication, division).</td>
+                        <td>Variable</td>
+                        <td>A symbol (usually a letter) representing an unknown value.</td>
+                        <td>In $3x + 5$, $x$ is the variable.</td>
                     </tr>
                     <tr>
-                        <td><a href="equations.html">Equations (One-step, Two-step)</a></td>
-                        <td>Solve linear equations using inverse operations; check solutions.</td>
-                        <td>Understanding of variables and expressions.</td>
+                        <td>Expression</td>
+                        <td>A combination of numbers, variables, and operation symbols (no equals sign).</td>
+                        <td>$2x + 7$, $y^2 - 4$, $5(a+b)$</td>
                     </tr>
                     <tr>
-                        <td><a href="inequalities.html">Inequalities</a></td>
-                        <td>Solve and graph linear inequalities; interpret inequality solutions.</td>
-                        <td>Proficiency in solving equations.</td>
+                        <td>Equation</td>
+                        <td>A mathematical statement that two expressions are equal, shown with an equals sign ($=$).</td>
+                        <td>$x + 5 = 12$, $2y = 10 - y$</td>
                     </tr>
                     <tr>
-                        <td><a href="graphing_linear_equations.html">Graphing Linear Equations</a></td>
-                        <td>Plot points; understand coordinate plane; graph lines using various methods (slope-intercept, point-slope).</td>
-                        <td>Understanding of equations and variables.</td>
+                        <td>Inequality</td>
+                        <td>A mathematical statement comparing two expressions that are not equal (using $<, >, \le, \ge, \ne$).</td>
+                        <td>$x > 3$, $2y \le 8$, $a + b \ne 0$</td>
+                    </tr>
+                    <tr>
+                        <td>Coefficient</td>
+                        <td>The numerical factor of a term containing a variable.</td>
+                        <td>In $7x^2$, $7$ is the coefficient.</td>
+                    </tr>
+                    <tr>
+                        <td>Constant</td>
+                        <td>A value that does not change; a number on its own.</td>
+                        <td>In $3x + 5$, $5$ is the constant.</td>
                     </tr>
                 </tbody>
             </table>
-            <p>This table provides a quick overview of what you'll achieve in each section.</p>
         </section>
 
         <section>
-            <h3>Why Follow the Sequence?</h3>
-            <p>Each topic in our curriculum is carefully designed to build upon the knowledge gained in the previous one. Starting with **Variables and Expressions** lays the groundwork for understanding how to manipulate terms, which is essential for solving **Equations**. Once you grasp equations, **Inequalities** introduce a new dimension to problem-solving, and finally, **Graphing Linear Equations** brings together algebraic concepts with visual representation. Following this progression ensures a solid understanding and smooth learning experience.</p>
-        </section>
-
-        <section>
-            <h3>What's Coming Next?</h3>
-            <p>We're constantly working to expand our content! Future topics will include more advanced concepts such as systems of equations, polynomials, and quadratic equations. Be sure to check back regularly for updates and new lessons.</p>
+            <h3>Why Study Algebra?</h3>
+            <p>Algebra is more than just solving for 'x'; it's a powerful tool for logical reasoning and problem-solving in countless real-world scenarios. It's the gateway to advanced mathematics and essential for understanding many scientific and technological fields.</p>
+            <h4>Applications and Benefits</h4>
+            <ul>
+                <li>Solving complex problems in science, engineering, and economics.</li>
+                <li>Budgeting and financial planning.</li>
+                <li>Understanding patterns and relationships in data.</li>
+                <li>Coding and computer programming.</li>
+                <li>Developing critical thinking and analytical skills.</li>
+            </ul>
         </section>
     </main>
 
     <footer>
-        <p>We will be adding more topics in the future, so please check back later.</p>
-        <p>Happy learning!</p>
+        <p>Part of the <a href="index.html">Skill-Up Hub</a> math curriculum.</p>
+        <p>&copy; 2025 Skill-Up Hub. All rights reserved.</p>
     </footer>
 
 </body>
